  is no longer possible to run Ant via "java -jar ant.jar" without
  manually altering the CLASSPATH.  Instead of that a file
  ant-bootstrap.jar is included in the etc directory of the binary
  distribution, copy this to the lib directory and use 
  "java -jar ant-bootstrap.jar" instead if you want to run Ant without
  the wrapper script (not recommended).

Fixed bugs:
-----------

* <property environment=... /> now works on OS/400.

* <manifest> wouldn't update an existing manifest if only an attribute
  of an existing section changed.

* ant.bat now supports the ANT_ARGS and JAVACMD environment variables
  again (like Ant 1.5 did).

* The "plain" <junit> <formatter> could throw a NullPointerException
  if an error occured in setUp.

* <cab> could hang listcab on large <fileset>s.

* <junit> will now produce output when a test times out as well.

* The starteam stcheckout, stcheckin tasks now correctly compute status of files
  against whatever local tree they are run against and, optionally, will not
  process a file if it is current.  Previously you had to process everything
  unless you ran against the default folder which wasn't the normal use-case for
  ant-starteam.  The stlist task now similarly displays that status correctly
  making it a more generally useful tool.  

* <replace> would count some internal character replacements when
  reporting the number of replaced tokens.

* <concat> would cause an exception if a <filelist> pointed to files
  that do not exist.

* <javadoc> will now pass -source to custom doclets as well.

Other changes:
--------------
* <setproxy> lets you set the username and password for proxies that want authentication

* <loadproperties> has a new encoding attribute.

* <echoproperties> can now create XML output.

* <echoproperties> has a new srcfile attribute that can make it read
  properties files and output them instead of Ant's properties.

* <filterset> will now resolve filters recursively.
