@@ -320,23 +320,27 @@ Installing Ant / Optional Tasks</a> section above.</p>
   <tr>
     <td >bsf.jar</td>
     <td>script task</td>
-    <td><a href="http://oss.software.ibm.com/developerworks/projects/bsf" target="_top">
-        oss.software.ibm.com/developerworks/projects/bsf</a></td>
+    <td><a href="http://jakarta.apache.org/bsf/" target="_top">http://jakarta.apache.org/bsf/</a></td>
   </tr>
   <tr>
     <td>netrexx.jar</td>
-    <td>netrexx task</td>
+    <td>netrexx task, Rexx with the script task</td>
     <td><a href="http://www2.hursley.ibm.com/netrexx" target="_top">
         www2.hursley.ibm.com/netrexx</a></td>
   </tr>
   <tr>
     <td>js.jar</td>
-    <td>javascript with script task</td>
+    <td>Javascript with script task</td>
     <td><a href="http://www.mozilla.org/rhino/" target="_top">www.mozilla.org/rhino</a></td>
   </tr>
   <tr>
+    <td>jython.jar</td>
+    <td>Python with script task</td>
+    <td><a href="http://jython.sourceforge.net/" target="_top">jython.sourceforge.net</a></td>
+  </tr>
+  <tr>
     <td>jpython.jar</td>
-    <td>python with script task</td>
+    <td>Python with script task <b>deprecated, jython is the prefered engine</b></td>
     <td><a href="http://www.jpython.org/" target="_top">www.jpython.org</a></td>
   </tr>
   <tr>
@@ -348,6 +352,16 @@ Installing Ant / Optional Tasks</a> section above.</p>
     <td>BeanShell JAR(s)</td>
     <td>BeanShell with script task</td>
     <td><a href="http://www.beanshell.org" target="_top">www.beanshell.org</a></td>
+  </tr>
+  <tr>
+    <td>jruby.jar</td>
+    <td>Ruby with script task</td>
+    <td><a href="http://jruby.sourceforge.net/" target="_top">jruby.sourceforge.net</a></td>
+  </tr>
+  <tr>
+    <td>judo.jar</td>
+    <td>Judoscript with script task</td>
+    <td><a href="http://www.judoscript.com/index.html" target="_top">www.judoscript.com/index.html</a></td>
   </tr>
   <tr>
     <td>netcomponents.jar</td>
