@@ -723,8 +723,8 @@ documentation.</p>
   <tr valign="top">
     <td nowrap><a href="OptionalTasks/script.html">Script</a></td>
     <td><p>Executes a script in a 
-     <a href="http://oss.software.ibm.com/developerworks/opensource/bsf/"
-      target="_top">BSF</a>-supported language.</p></td>
+     <a href="http://jakarta.apache.org/bsf/"
+      target="_top">Apache BSF</a>-supported language.</p></td>
   </tr>
 
   <tr valign="top">
